# aventurier

./: main.py  pyproject.toml
aventurier/: manage.py
aventurier/aventurier/: asgi.py  settings.py  urls.py  wsgi.py
aventurier/core/: admin.py  models.py  serializers.py  urls.py  views.py
aventurier/core/migrations/: 0001_initial.py  0002_remove_vocabitem_part_of_speech_delete_partofspeech.py
